istio-teaching/gateway-api/v1alpha2/gatewayclass/istio-gc-description.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
  description: this is a test gatewayclass1
